src/snapshot_middleware/snapshots/librojo__snapshot_middleware__meta_file__test__directory_read_json.snap
---
source: src/snapshot_middleware/meta_file.rs
expression: snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  relevant_paths:
    - /foo/init.meta.json
    - /foo/init.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: manually specified
  middleware: ~
  schema: ~
name: DEFAULT
class_name: DEFAULT
properties: {}
children: []
